--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <html>
-    Школа бойових мистецтв
-    <title></title>
-    <body>
-    <header style="background-color:black">
-        <img src="/uploads/2020/10/boxing-1293088_640_0_1602494675.png" height="50px"/>
-        <a href="https://uk.wikipedia.org/wiki/%D0%91%D0%BE%D0%B9%D0%BE%D0%B2%D1%96_%D0%BC%D0%B8%D1%81%D1%82%D0%B5%D1%86%D1%82%D0%B2%D0%B0" style="color:white">Історія</a>
+    <title>новий рік</title>
+    <body style="font-family:sans-serif; background-color:#f1faee;">
+    <header style="background-color:#e63946">
+        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/4074/christmas-tree-clipart-xl.png" height="50px"/>
+        <a href="https://pustunchik.ua/ua/holidays/new-year/istorija-jalynky" style="color:white">Історія</a>
     </header>
-    <main style="background-color:lightgray">
-        <h1 style="font-size:50px;background-color:lightgray; text-align:center">Школа бойових мистецтв<br/>
-        <img src="/uploads/2020/10/thai-boxing-297023_1280_0_1602496230.png" height="150"/></h1>
-        <p style="font-size:20px">Запрошуємо освоїти будь-який з видів рукопашного бою, який вам до вподоби. <br/>У нас представлені: <b><i>традиційний рукопашний бій, тайський бокс, Джиу-джитсу, карате та багато іншого</i></b>. Заняття ведуть професійні тренери у групах різного рівня.</p>
-        <img src="/uploads/2020/10/karate-4575114_640_0_1602523338.png" height="230px";/><img src="/uploads/2020/10/punching-bag_0_1602525500.png" height="230px";/><img src="/uploads/2020/10/boxing-ring_0_1602525156.png" height="230px";/>
+    <main style="background-color:#7da3ba">
+        <h1 style="font-size:50px;background-color:#7da3ba; text-align:center">Сайт про новий рік<br/>
+        <img src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/4074/christmas-tree-clipart-xl.png" height="150"/></h1>
+        <p style="font-size:20px">У більшості давніх народів святкування Нового року збігалося з початком відродження природи й відбувалося зазвичай до березня. Усі язичницькі народи ознаменовували його службовими обрядами богам, урочистими приношеннями, а також забавами. Давні єгиптяни відзначали початок нового року святом відродження Осіріса. У Стародавній Греції народ і жерці, надягнувши на себе маски, влаштовували на вулицях ходу з піснями й танцями. Жінки на про́ханих вечорах ворожили. </p> 
+ 
+<p style="font-size:20px"> В Україні саме у січні найбільше релігійних свят. Це пов'язано із новорічними обрядами і з тим, що взимку люди менше працювали коло землі.</p>
+
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>       
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/> 
     </main>
-    <footer style="background-color:black;color:white;">
-        <p style="font-size:15px"> Адреса: місто Спортивне, вул. 15.</p>
-        <p>Тел.:596-457</p>
+    <footer style="background-color:#344968;color:#8e9aab;">
+        <p style="font-size:15px"> </p>
+        <p>Тел.:987-654</p>
     </footer>
     </body>
 </html>
