--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>       
         <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>
         <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/> 
+                <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>       
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/> 
+                <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>       
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/>
+        <img src="https://pngimg.com/uploads/fir_tree/fir_tree_PNG3724.png" height="200px"/> 
     </main>
     <footer style="background-color:#344968;color:#8e9aab;">
         <p style="font-size:15px"> </p>
